[package]
name = "executor"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "antcc-executor"
path = "src/main.rs"

[profile.release]
strip = true

[dependencies]
anyhow = "1.0.102"
aws-credential-types = { version = "1.2.14", features = ["hardcoded-credentials"] }
aws-sdk-s3 = { version = "1", features = ["behavior-version-latest", "rustls"] }
colonyos = "1.0.5"
hostname = "0.4.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tempfile = "3.27.0"
tokio = { version = "1.51.1", features = ["full"] }
