[package]
name = "antcc"
version = "0.1.0"
edition = "2024"

[dependencies]
aws-config = "1.8.15"
aws-credential-types = { version = "1.2.14", features = ["hardcoded-credentials"] }
aws-sdk-s3 = { version = "1.129.0", features = ["behavior-version-latest"] }
colonyos = "1.0.5"
serde_json = "1.0.149"
tempfile = "3.27.0"
tokio = { version = "1.51.1", features = ["full"] }
uuid = { version = "1.23.0", features = ["v4"] }
